src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__details_tab_ssh_application_card.snap
---
source: src/ui/mod.rs
expression: output
---
 rustnet    1 Overview   2 Details   3 Activity   4 Graph   5 Host                                                                    ● eth0
─────────────────────────━━━━━━━━━──────────────────────────────────────────────────────────────────────────────────────────────────────────
  Process               Remote                  Local              Service    App                      State           RTT Hlth      Rx↓/Tx↑
                                                                                                                                            
▌ proc (4242)           203.0.113.7:4433        192.168.1.10:50000 -          TCP·SSH (OpenSSH)        ESTABLISHED       - ok            -/-
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
▎ proc → 203.0.113.7:4433 [ESTABLISHED] · click a field to copy ────────────────────────────────────────────────────────────────────────────
Connection                                                            Application: SSH                                                      
Protocol              TCP                                             SSH Version           SSH-2                                           
Status                Active (last seen <T> ago)                       Connection State      Established                                     
Local Address         192.168.1.10:50000                              Server Software       OpenSSH_9.6p1                                   
Remote Address        203.0.113.7:4433                                Client Software       OpenSSH_9.8                                     
Scope                 DOCUMENTATION                                   Algorithms            curve25519-sha256, ssh-ed25519                  
State                 ESTABLISHED                                     Auth Method           publickey                                       
Process               proc                                                                                                                  
PID                   4242                                                                                                                  
Service               -                                               Attributed Name       -                                               
Observed VLANs        -                                               Attributed Via        -                                               
                                                                                                                                            
Network Context                                                       Transport Health                                                      
Local Hostname        -                                               Initial RTT           -                                               
Local MAC             -                                               Live RTT              -                                               
Remote Hostname       -                                               TCP Retransmits (R)   0                                               
Remote MAC            -                                               Out-of-Order (O)      0                                               
Country               -                                               Duplicate ACKs        0                                               
City                  -                                               Fast Retransmits      0                                               
ASN                   -                                               Window Size           -                                               
                                                                                                                                            
Attribution                                                                                                                                 
PID                   4242                                                                                                                  
PPID                  -                                                                                                                     
Process Tree          -                                                                                                                     
Executable            -                                                                                                                     
User                  -                                                                                                                     
Match                 -                                                                                                                     
                                                                                                                                            
▎ Traffic Statistics · smoothed · independent B/s · linear · auto ──────────────────────────────────────────────────────────────────────────
↓ RX Now -           →                             peak           -   ↑ TX Now -           →                             peak           -   
Total 0 B  ·  0 packets                                               Total 0 B  ·  0 packets                                               
Collecting traffic history...                                         Collecting traffic history...                                         
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
 j/k connection  s scale  z log  l lock  c copy remote addr  esc back                                                        h help  q quit
