src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__details_tab_tcp_https.snap
---
source: src/ui/mod.rs
expression: output
---
 rustnet    1 Overview   2 Details   3 Activity   4 Graph   5 Host                                                                    ● eth0
─────────────────────────━━━━━━━━━──────────────────────────────────────────────────────────────────────────────────────────────────────────
  Process               Remote                  Local              Service    App                      State           RTT Hlth      Rx↓/Tx↑
                                                                                                                                            
▌ firefox (2001)        140.82.121.4:443        192.168.1.10:51234 https      TCP                      ESTABLISHED       - ok            -/-
  systemd-resolved (82… 1.1.1.1:53              192.168.1.10:53    dns        UDP                      UDP_ACTIVE        - -             -/-
  sshd (1500)           10.0.0.5:51022          192.168.1.10:22    ssh        TCP                      ESTABLISHED       - ok            -/-
                                                                                                                                            
▎ firefox → 140.82.121.4:443 [ESTABLISHED] · click a field to copy ─────────────────────────────────────────────────────────────────────────
Connection                                                            Application                                                           
Protocol              TCP                                             Detected              -                                               
Status                Active (last seen <T> ago)                                                                                             
Local Address         192.168.1.10:51234                                                                                                    
Remote Address        140.82.121.4:443                                                                                                      
Scope                 PUBLIC                                                                                                                
State                 ESTABLISHED                                                                                                           
Process               firefox                                                                                                               
PID                   2001                                                                                                                  
Service               https                                           Attributed Name       -                                               
Observed VLANs        0, 42                                           Attributed Via        -                                               
                                                                                                                                            
Network Context                                                       Transport Health                                                      
Local Hostname        -                                               Initial RTT           -                                               
Local MAC             68:5e:dd:09:15:5e (Apple, Inc.)                 Live RTT              -                                               
Remote Hostname       -                                               TCP Retransmits (R)   0                                               
Remote MAC            -                                               Out-of-Order (O)      0                                               
Country               -                                               Duplicate ACKs        0                                               
City                  -                                               Fast Retransmits      0                                               
ASN                   -                                               Window Size           -                                               
                                                                                                                                            
Attribution                                                                                                                                 
PID                   2001                                                                                                                  
PPID                  -                                                                                                                     
Process Tree          -                                                                                                                     
Executable            -                                                                                                                     
User                  -                                                                                                                     
Match                 -                                                                                                                     
                                                                                                                                            
▎ Traffic Statistics · smoothed · independent B/s · linear · auto ──────────────────────────────────────────────────────────────────────────
↓ RX Now -           →                             peak           -   ↑ TX Now -           →                             peak           -   
Total 234.38 KB  ·  234 packets                                       Total 12.21 KB  ·  12 packets                                         
Collecting traffic history...                                         Collecting traffic history...                                         
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
 j/k connection  s scale  z log  l lock  c copy remote addr  esc back                                                        h help  q quit
