src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__filter_input_mode_active_empty.snap
---
source: src/ui/mod.rs
assertion_line: 652
expression: output
---
 / |                                   ↑↓ navigate · Enter confirm · Esc cancel
