src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__filter_input_mode_active_with_text.snap
---
source: src/ui/mod.rs
assertion_line: 664
expression: output
---
 / port:443|                           ↑↓ navigate · Enter confirm · Esc cancel
