src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__filter_input_persisted.snap
---
source: src/ui/mod.rs
assertion_line: 676
expression: output
---
 / tcp port:443                                      filter active · Esc clears
