src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__graph_tab_compact_traffic.snap
---
source: src/ui/mod.rs
expression: output
---
 rustnet    1 Overview   2 Details   3 Activity   4 Graph   5 Host        ● eth0
──────────────────────────────────────────────────━━━━━━━───────────────────────
Traffic   Health   Distribution                                                 
━━━━━━━─────────────────────────────────────────────────────────────────────────
▎ Traffic Over Time · eth0 · 60s · B/s ─────────────────────────────────────────
Waiting for traffic data...                                                     
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
▎ Connection Lifecycle ─────────────────────────────────────────────────────────
Waiting for connection data...                                                  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 v/V section  esc back                                           h help  q quit
