src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__graph_tab_small_terminal_drops_bottom_sections.snap
---
source: src/ui/mod.rs
expression: output
---
 rustnet    1 Overview   2 Details   3 Activity   4 Graph   5 Host        ● eth0
──────────────────────────────────────────────────━━━━━━━───────────────────────
▎ Traffic Over Time (60s) ────────────────────────────  ▎ Connection Lifecycle ─
Waiting for traffic data...                             Waiting for connection d
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
▎ Observed Network Health   ▎ TCP Counters ───────────  ▎ Observed TCP States ──
Waiting for health data...    Retransmits         0          ESTAB ░░▒▒▓▓█    2 
                              Out of Order        0      TIME_WAIT ░▒▓▌···    1 
                              Fast Retrans        0                             
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 esc back                                                        h help  q quit
