src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__help_overlay_details.snap
---
source: src/ui/mod.rs
expression: output
---
                                                                                                    
    ╭ Help · Details ──────────────────────────────────────────────────────────────────────────╮    
    │ Details explains the selected connection using captured traffic and metadata.          ▐ │    
    │ Inspect its endpoints, process, protocol, timing, and transport health.                ▐ │    
    │                                                                                        ▐ │    
    │ ▎ Details Actions                                                                      ▐ │    
    │   s             Toggle independent/shared scales in traffic charts                     ▐ │    
    │   z / l         Toggle log scale / lock current bounds in traffic charts               ▐ │    
    │   ↑/k, ↓/j      Show the previous or next connection                                   ▐ │    
    │   g, G          Show the first or last connection                                      ▐ │    
    │   Page Up/Down  Move through connections by one page                                   ▐ │    
    │   Ctrl+B/F      Move through connections by one page                                   ▐ │    
    │   c             Copy the remote address                                                ▐ │    
    │   Esc           Return to Overview                                                     ▐ │    
    │                                                                                        ▐ │    
    │ ▎ Transport Health                                                                     ▐ │    
    │   Window Size     Advertised receive windows: ↓ this host's, ↑ the remote's            ▐ │    
    │   unknown window  Scaling is announced only in a handshake rustnet did not see           │    
    │   Initial RTT     Blank without a captured handshake; Live RTT still measures            │    
    │                                                                                          │    
    │ ▎ Connection Display                                                                     │    
    │   Full color  Active connection                                                          │    
    │   Countdown   Idle; the ▎ stripe and ↓/↑ countdown run yellow to red until removal       │    
    │   Gray        Historic closed connection                                                 │    
    │   ~name       Hostname inferred from an observed DNS response                            │    
    │   App column  Application protocol, SNI, or HTTP Host                                    │    
    │   R3/O1       Health for TCP: retransmits and out-of-order packets                       │    
    │   R1/V0       Health for QUIC: Retry and Version Negotiation packets                     │    
    ╰──────────────────────────────────────────────────────────────────────────────────────────╯
